<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sub"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.uab.dedam.todoman.NewTaskActivity">

    <Button
        android:text="@string/clearLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btnSaveTask"
        android:layout_toEndOf="@+id/btnSaveTask"
        android:id="@+id/btnClearContent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editTextTaskDescription"
        android:hint="@string/taskDescriptionLabel"
        android:layout_below="@+id/editTextTaskTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/saveLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSaveTask"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/cancelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCancelTask"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btnClearContent"
        android:layout_toEndOf="@+id/btnClearContent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSetDate"
        android:text="@string/setDateLabel"
        android:layout_below="@+id/editTextTaskDescription"
        android:layout_toRightOf="@+id/checkboxCompleted"
        android:layout_toEndOf="@+id/checkboxCompleted"
        android:layout_marginTop="12dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkboxCompleted"
        android:text="@string/completedLabel"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/btnSetDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LabelDateSelected"
        android:text="@string/dateSelectedLabel"
        android:layout_alignBaseline="@+id/btnSetDate"
        android:layout_alignBottom="@+id/btnSetDate"
        android:layout_toLeftOf="@+id/btnClearContent"
        android:layout_toStartOf="@+id/btnClearContent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textAutoCorrect"
        android:hint="@string/taskTitleLabel"
        android:ems="10"
        android:id="@+id/editTextTaskTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>